--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "start": "ts-node src/index.ts",
     "test": "jest --config jestconfig.json",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
@@ -29,15 +30,18 @@
   "homepage": "https://github.com/zinovik/node-audio-collection#readme",
   "devDependencies": {
     "@types/jest": "^24.0.13",
+    "@types/node": "^12.0.7",
     "jest": "^24.8.0",
-    "prettier": "^1.17.1",
+    "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
-    "tslint": "^5.16.0",
+    "tslint": "^5.17.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.1"
   },
   "dependencies": {
-    "node-id3": "^0.1.7"
+    "mp3-duration": "^1.1.0",
+    "node-id3": "^0.1.7",
+    "ts-node": "^8.2.0"
   },
   "files": [
     "lib/**/*"
