--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-audio-collection",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "node audio collection",
   "main": "lib/index.js",
   "bin": {
@@ -18,8 +18,8 @@
     "preversion": "npm run lint"
   },
   "engines": {
-    "node": "12.0.0",
-    "npm": "6.9.0"
+    "node": ">= 12",
+    "npm": ">= 6.9"
   },
   "repository": {
     "type": "git",
@@ -32,20 +32,20 @@
   },
   "homepage": "https://github.com/zinovik/node-audio-collection#readme",
   "devDependencies": {
-    "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.7",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.6.2",
     "jest": "^24.8.0",
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
-    "tslint": "^5.17.0",
+    "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.1"
+    "typescript": "^3.5.3"
   },
   "dependencies": {
     "moment": "^2.24.0",
     "mp3-duration": "^1.1.0",
     "node-id3": "^0.1.7",
-    "ts-node": "^8.2.0"
+    "ts-node": "^8.3.0"
   },
   "files": [
     "lib/**/*"
