--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-audio-collection",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "node audio collection",
   "main": "lib/index.js",
   "bin": {
@@ -11,8 +11,8 @@
     "build": "tsc",
     "start": "ts-node src/index.ts",
     "test": "jest --config jestconfig.json --collectCoverage",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "tslint -p tsconfig.json",
+    "format": "prettier --write \"src/**/*.ts*\" \"test*/**/*.ts*\"",
+    "lint": "tslint -p tsconfig.json -c tslint.json",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint"
@@ -33,7 +33,7 @@
   "homepage": "https://github.com/zinovik/node-audio-collection#readme",
   "devDependencies": {
     "@types/jest": "^24.0.15",
-    "@types/node": "^12.6.3",
+    "@types/node": "^12.6.8",
     "jest": "^24.8.0",
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
