--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-audio-collection",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "node audio collection",
   "main": "lib/index.js",
   "bin": {
@@ -32,19 +32,20 @@
   },
   "homepage": "https://github.com/zinovik/node-audio-collection#readme",
   "devDependencies": {
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.5",
+    "@types/jest": "^24.0.21",
+    "@types/node": "^12.12.5",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "typemoq": "^2.1.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.4"
   },
   "dependencies": {
     "moment": "^2.24.0",
     "mp3-duration": "^1.1.0",
+    "music-metadata": "^4.8.4",
     "node-id3": "^0.1.11",
     "ts-node": "^8.4.1"
   },
