--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-audio-collection",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "description": "node audio collection",
   "main": "lib/index.js",
   "bin": {
@@ -39,13 +39,13 @@
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
+    "ts-node": "^8.4.1",
     "typemoq": "^2.1.0",
     "typescript": "^3.6.4"
   },
   "dependencies": {
     "moment": "^2.24.0",
-    "music-metadata": "^4.8.4",
-    "ts-node": "^8.4.1"
+    "music-metadata": "^4.8.4"
   },
   "files": [
     "lib/**/*"
